--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             }
 
         .but {
-            margin: 5px;
+            margin:  5px 5px 5px 0px;
             padding: 10px;
             background-color: rgb(0, 177, 255);
             color: #fff;
@@ -78,12 +78,13 @@
 
 
         /*避免IE跑出奇怪的東西*/
-        textarea {
+        #textarea_copy {
             opacity: 0;
             width: 0px;
             height: 0px;
             display: block;
-            position: absolute;
+            position: fixed;
+            top:0px;
         }
 
         /*複製成功的訊息框*/
@@ -135,7 +136,7 @@
         <table style="margin-top:10px;">
             <tr>
                 <td>水平格數(1~120)</td>
-                <td><input type="tel" id="text_wid" value="50" title="水平的格子數量"/></td>
+                <td><input type="tel" id="text_wid" value="50" title="水平的格子數量" /></td>
             </tr>
             <tr>
                 <td>輸出寬度</td>
@@ -157,7 +158,7 @@
 
         <hr />
         說明：將圖片轉換成像素圖，並且用表格的形式呈現。<br>
-        版本：1.1.0<br>
+        版本：1.2.0<br>
         討論區：<a href="https://forum.gamer.com.tw/C.php?bsn=60076&snA=3923782" target="_blank">討論區</a><br>
         作者：<a href="https://home.gamer.com.tw/homeindex.php?owner=hbl917070" target="_blank">hbl917070（深海異音）</a>
         <br><br>
@@ -169,6 +170,7 @@
 
     <div id="div_alert">訊息框</div>
 
+    <textarea id="textarea_copy"></textarea>
 
 
     <script type="text/javascript">
@@ -263,14 +265,19 @@
         * 複製到剪貼簿
         */
         function copy_string(s) {
-            var clip_area = document.createElement('textarea');
+            var textarea_copy = document.getElementById("textarea_copy");
+            textarea_copy.textContent = s;
+            textarea_copy.select();
+            document.execCommand('copy');
+
+            /*var clip_area = document.createElement('textarea');
             clip_area.textContent = s;
 
             document.body.appendChild(clip_area);
             clip_area.select();
 
             document.execCommand('copy');
-            clip_area.remove();
+            clip_area.remove();*/
         }
 
 
@@ -304,7 +311,7 @@
                     fun_載入圖片(src);
                     document.getElementById("div_out").style.display = "block";//第一次執行後就顯示輸出結果
                     document.getElementById("but_Apply").style.display = "inline-block";//第一次執行後就顯示輸出結果
-                    
+
                 }
             }
 
