--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             }
 
         .but {
-            margin:  5px 5px 5px 0px;
+            margin: 5px 5px 5px 0px;
             padding: 10px;
             background-color: rgb(0, 177, 255);
             color: #fff;
-            display: inline-block;
+            display: inline;
             /*禁止選取*/
             -webkit-touch-callout: none;
             -webkit-user-select: none;
@@ -84,7 +84,7 @@
             height: 0px;
             display: block;
             position: fixed;
-            top:-20px;
+            top: -20px;
         }
 
         /*複製成功的訊息框*/
@@ -158,7 +158,7 @@
 
         <hr />
         說明：將圖片轉換成像素圖，並且用表格的形式呈現。<br>
-        版本：1.2.0<br>
+        版本：1.2.1<br>
         討論區：<a href="https://forum.gamer.com.tw/C.php?bsn=60076&snA=3923782" target="_blank">討論區</a><br>
         作者：<a href="https://home.gamer.com.tw/homeindex.php?owner=hbl917070" target="_blank">hbl917070（深海異音）</a>
         <br><br>
@@ -269,7 +269,9 @@
             textarea_copy.textContent = s;
             textarea_copy.select();
             document.execCommand('copy');
+            textarea_copy.textContent = "";
 
+            document.body.focus();
             /*var clip_area = document.createElement('textarea');
             clip_area.textContent = s;
 
