--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 
         .but {
             margin: 5px 5px 5px 0px;
-            padding: 10px;
+            padding: 0px 10px;
             background-color: rgb(0, 177, 255);
             color: #fff;
-            display: inline;
+            display: inline-block;
+            height:40px;
+            line-height:40px;
             /*禁止選取*/
             -webkit-touch-callout: none;
             -webkit-user-select: none;
@@ -158,7 +160,7 @@
 
         <hr />
         說明：將圖片轉換成像素圖，並且用表格的形式呈現。<br>
-        版本：1.2.1<br>
+        版本：1.2.2<br>
         討論區：<a href="https://forum.gamer.com.tw/C.php?bsn=60076&snA=3923782" target="_blank">討論區</a><br>
         作者：<a href="https://home.gamer.com.tw/homeindex.php?owner=hbl917070" target="_blank">hbl917070（深海異音）</a>
         <br><br>
