--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0px;
             padding: 0px;
             font-family: "微軟正黑體";
-            background-color: rgb(238, 238, 238);
+            background-color: rgb(237, 237, 237);
             font-size: 16px;
         }
 
@@ -52,8 +52,8 @@
             background-color: rgb(0, 177, 255);
             color: #fff;
             display: inline-block;
-            height:40px;
-            line-height:40px;
+            height: 40px;
+            line-height: 40px;
             /*禁止選取*/
             -webkit-touch-callout: none;
             -webkit-user-select: none;
@@ -92,6 +92,7 @@
         /*複製成功的訊息框*/
         #div_alert {
             background-color: rgb(16, 16, 16);
+            z-index: 500;
             color: #FFF;
             display: inline-block;
             position: fixed;
@@ -110,8 +111,34 @@
             transition: all 0.3s;
             pointer-events: none;
             opacity: 0;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
+
+        #d1_output td:hover {
+            outline: 2px solid #ff0000;
+        }
+
+        .box {
+            background-color: rgba(255,255,255,1);
+            margin: 20px 8px 20px 8px;
+            box-shadow: 0px 1px 3px rgba(0,0,0,0.35);
+            border-radius: 3px;
+            padding: 5px;
+        }
+
+            .box h2 {
+                margin: 0px;
+                margin-bottom: 10px;
+                font-size: 24px;
+                margin-left: 0px;
+            }
     </style>
+
 
 
 
@@ -120,59 +147,254 @@
 </head>
 <body>
 
+    <!--【大標題】-->
     <div class="title"><h1>圖片轉像素圖(表格版)</h1></div>
 
-    <div style="margin:5px;">
-
-
-        <img id="img01" />
-        <canvas id="can01"></canvas>
-
-
-        <input style="display:none" type="file" id="file_input" accept="image/*" />
-        <div onclick='document.getElementById("file_input").click()' class="but">載入圖片</div>
-        <div onclick='fun_轉換(document.getElementById("img01"))' class="but" id="but_Apply" style="display:none;">套用設定</div>
 
 
 
-        <table style="margin-top:10px;">
-            <tr>
-                <td>水平格數(1~120)</td>
-                <td><input type="tel" id="text_wid" value="50" title="水平的格子數量" /></td>
-            </tr>
-            <tr>
-                <td>輸出寬度</td>
-                <td><input type="tel" id="text_output" value="570" title="輸出的表格寬度" /></td>
-            </tr>
-        </table>
+    <img id="img01" />
+    <canvas id="can01"></canvas>
+    <input style="display:none" type="file" id="file_input" accept="image/*" />
+    <div id="div_alert">訊息框</div>
 
 
-        <!--輸出結果，第一次執行後才會出現-->
-        <div id="div_out" style="display:none">
-            <hr>
-            <div class="but" onclick="fun_copy_table()" title="直接把表格複製到剪貼簿">直接複製</div>
-            <div class="but" onclick="fun_copy_html()" title="複製成html原始碼（純文字）">複製成html</div>
-            <div class="but" onclick="fun_copy_baha()" title="複製成巴哈姆特原始碼（純文字）">複製成巴哈姆特原始碼</div>
 
-            <div id="d" contenteditable="false" style="width:100%;overflow-x:auto;"></div>
+    <div style="max-width:900px;margin:auto">
+
+
+        <!--【設定】-->
+        <div class="box">
+
+            <h2>設定</h2>
+            <div onclick='document.getElementById("file_input").click()' class="but">載入圖片</div>
+            <div onclick='fun_轉換(document.getElementById("img01"))' class="but" id="but_Apply" style="display:none;">套用設定</div>
+
+
+            <table border="0" cellspacing="0" cellpadding="0">
+                <tr title="水平的格子數量，不建議超過80">
+                    <td>水平格數(1~120)</td>
+                    <td><input type="tel" id="text_wid" value="50" /></td>
+                </tr>
+                <tr title="輸出的表格寬度" style="height:45px;">
+                    <td>輸出寬度</td>
+                    <td><input type="tel" id="text_output" value="570" /></td>
+                </tr>
+            </table>
         </div>
 
 
-        <hr />
-        說明：將圖片轉換成像素圖，並且用表格的形式呈現。<br>
-        版本：1.2.2<br>
-        討論區：<a href="https://forum.gamer.com.tw/C.php?bsn=60076&snA=3923782" target="_blank">討論區</a><br>
-        作者：<a href="https://home.gamer.com.tw/homeindex.php?owner=hbl917070" target="_blank">hbl917070（深海異音）</a>
-        <br><br>
+
+
+        <!--【輸出結果】，第一次執行後才會出現-->
+        <div id="div_out" style="display:none;" class="box">
+
+            <style>
+                /*放置表格外層的DIV，用來產生水平捲軸*/
+                .div_output_type {
+                    overflow-x: auto;
+                    overflow-y: hidden;
+                    margin: -5px;
+                    background-color: #FFF;
+                    margin-bottom: 10px;
+                }
+
+                #table_output_type {
+                    background-color: rgba(50,50,50,0);
+                    border-collapse: collapse;
+                }
+
+                    #table_output_type a {
+                        margin: 5px 15px 0px 15px;
+                        font-size: 20px;
+                        font-weight: 900;
+                        white-space: nowrap;
+                        display:block;
+                        line-height:30px;
+                    }
+
+                    #table_output_type td {
+                        border-bottom: 6px solid rgba(0,0,0,0);
+                        /*禁止選取*/
+                        -webkit-touch-callout: none;
+                        -webkit-user-select: none;
+                        -khtml-user-select: none;
+                        -moz-user-select: none;
+                        -ms-user-select: none;
+                        user-select: none;
+                    }
+
+                        #table_output_type td:hover {
+                            color: rgb(0, 146, 255);
+                        }
+
+                .table_output_sel {
+                    border-bottom: 6px solid #00b1ff !important;
+                }
+
+
+
+                /*下方的水平線（漸層）*/
+                .div_output_type_ling {
+                    margin-top:-10px;
+                    margin-left:-5px;
+                    margin-right:-5px;
+                    height: 1px;
+                    background-color: rgb(0, 177, 255);
+                    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
+                    /*background: -moz-linear-gradient(top, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0) 100%);
+                    background: -webkit-linear-gradient(top, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0) 100%);
+                    background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0) 100%);
+                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d000000', endColorstr='#00000000',GradientType=0 );*/
+                }
+
+                #text_output_html, #text_output_baha {
+                    height: 30vh;
+                    display: block;
+                    width: calc(100% - 5px);
+                    border: none;
+                    margin-top: 10px;
+                }
+            </style>
+
+            <div class="div_output_type">
+
+                <table id="table_output_type" border="0" align="center">
+                    <tr>
+                        <td id="td_output_1"><a>表格</a></td>
+                        <td id="td_output_2" style="display:none"><h2>圖片</h2></td>
+                        <td id="td_output_3"><a>html原始碼</a></td>
+                        <td id="td_output_4"><a>巴哈姆特原始碼</a></td>
+                    </tr>
+                </table>
+
+                <script>
+
+                    var table_output_type = document.getElementById("table_output_type");
+                    for (var i = 0; i < table_output_type.getElementsByTagName("td").length; i++) {
+
+                        table_output_type.getElementsByTagName("td")[i].onclick = function () {//註冊點擊事件
+
+
+                            fun_sel_output_type(this.id.substr(this.id.length - 1, 1));
+                        };
+
+                    }
+
+                    ///
+                    ///選擇某一個類型
+                    ///
+                    function fun_sel_output_type(int_nub) {
+
+                        for (var j = 0; j < table_output_type.getElementsByTagName("td").length; j++) {
+                            table_output_type.getElementsByTagName("td")[j].className = "";
+                        }
+
+                        //選擇目前選取的
+                        document.getElementById("td_output_" + int_nub).className = "table_output_sel";
+
+
+                        for (var i = 0; i < table_output_type.getElementsByTagName("td").length; i++) {
+                            document.getElementById("d" + (i + 1)).style.display = "none";
+                        }
+
+                        if (int_nub == "1") {
+                            document.getElementById("d1").style.display = "block";
+                        } else if (int_nub == "2") {
+                            document.getElementById("d2").style.display = "block";
+                        } else if (int_nub == "3") {
+                            document.getElementById("d3").style.display = "block";
+                            fun_show_html();
+                        } else if (int_nub == "4") {
+                            document.getElementById("d4").style.display = "block";
+                            fun_show_baha();
+                        }
+
+
+                    }
+
+
+
+                </script>
+
+                
+            </div>
+
+
+            <div class="div_output_type_ling"></div>
+
+
+
+
+
+            <div id="d1" style="width:100%;overflow-x:auto;">
+                <div class="but" onclick="fun_copy_table()" title="直接把表格複製到剪貼簿">直接複製</div>
+
+                <div id="d1_output" style="width:100%;overflow-x:auto;">
+                </div>
+
+            </div>
+
+            <div id="d2" style="width:100%;overflow-x:auto;"></div>
+
+            <div id="d3" style="width:100%;overflow-x:auto;">
+                <div class="but" onclick="copy_string('text_output_html')" title="複製成html原始碼（純文字）">複製成html</div>
+                <textarea id="text_output_html"></textarea>
+            </div>
+
+            <div id="d4" style="width:100%;overflow-x:auto;">
+                <div class="but" onclick="copy_string('text_output_baha')" title="複製成巴哈姆特原始碼（純文字）">複製成巴哈姆特原始碼</div>
+                <textarea id="text_output_baha"></textarea>
+            </div>
+        </div>
+
+
+
+
+
+        <!--【說明】-->
+        <div class="box">
+            <h2>說明</h2>
+            說明：將圖片轉換成像素圖，並且用表格的形式呈現。<br>
+            版本：1.3.0<br>
+            討論區：<a href="https://forum.gamer.com.tw/C.php?bsn=60076&snA=3923782" target="_blank">討論區</a><br>
+            作者：<a href="https://home.gamer.com.tw/homeindex.php?owner=hbl917070" target="_blank">hbl917070（深海異音）</a>
+
+
+        </div>
 
     </div>
 
+    <br><br>
 
 
 
-    <div id="div_alert">訊息框</div>
 
-    <textarea id="textarea_copy"></textarea>
+
+
+
+    <!--<script>
+
+        ///
+        ///繪圖事件
+        ///
+        document.getElementById("d1_output").addEventListener("mousedown", function (e) {//按下時，註冊事件
+            e.preventDefault();//取消點擊事件
+            document.getElementById("d1_output").addEventListener("mouseenter", fun_滑鼠移動, true);
+            e.target.setAttribute("bgcolor", "");
+        }, true);
+
+        function fun_滑鼠移動(e) {
+            document.getElementById("test").innerHTML = e.target.getAttribute("bgcolor");
+            e.target.setAttribute("bgcolor", "");
+        }
+
+        document.onmouseup = function () {//放開時，取消事件
+            document.getElementById("d1_output").removeEventListener("mouseenter", fun_滑鼠移動, true);
+        };
+
+    </script>-->
+
 
 
     <script type="text/javascript">
@@ -216,7 +438,7 @@
         ///直接複製table
         ///
         function fun_copy_table() {
-            SelectText("d");//選取物件
+            SelectText("d1_output");//選取物件
             document.execCommand('copy');//複製當前選取的東西
             fun_alert("複製成功");
         }
@@ -225,19 +447,19 @@
         ///
         ///複製成html原始碼
         ///
-        function fun_copy_html() {
-            var x = document.getElementById("d").innerHTML;
-            copy_string(x);
-            fun_alert("複製成功");
+        function fun_show_html() {
+            var x = document.getElementById("d1_output").innerHTML;
+
+            document.getElementById("text_output_html").value = x;
         }
 
 
         ///
         ///複製成巴哈姆特原始碼
         ///
-        function fun_copy_baha() {
+        function fun_show_baha() {
 
-            var obj_table = document.getElementById("d").getElementsByTagName("table")[0];
+            var obj_table = document.getElementById("d1_output").getElementsByTagName("table")[0];
             var wid = obj_table.getAttribute("width");
             var hei = obj_table.getAttribute("height");
             var sum = "[div] [/div][div] [/div] [table width=" + wid + " cellspacing=0 cellpadding=0 height=" + hei + "]";
@@ -257,23 +479,27 @@
 
             }
             sum += "[/table][div] [/div][div] [/div]";
-            copy_string(sum);
 
-            fun_alert("複製成功");
+
+            document.getElementById("text_output_baha").value = sum;
+
+
         }
 
 
         /*
         * 複製到剪貼簿
         */
-        function copy_string(s) {
-            var textarea_copy = document.getElementById("textarea_copy");
-            textarea_copy.textContent = s;
+        function copy_string(text_id) {
+
+            var textarea_copy = document.getElementById(text_id);
             textarea_copy.select();
             document.execCommand('copy');
-            textarea_copy.textContent = "";
+            fun_alert("複製成功");
 
-            document.body.focus();
+            //textarea_copy.textContent = "";
+
+
             /*var clip_area = document.createElement('textarea');
             clip_area.textContent = s;
 
@@ -452,7 +678,7 @@
 
                     var k = (wid * j + i) * 4;//取個陣列對應的位置
 
-                    //取個RGBA
+                    //取得 RGBA
                     var col_r = s.data[k + 0].toString(16);
                     var col_g = s.data[k + 1].toString(16);
                     var col_b = s.data[k + 2].toString(16);
@@ -501,11 +727,30 @@
 
             sum += "</table> <p>&nbsp;</p><p>&nbsp;</p>";
 
-            document.getElementById("d").innerHTML = sum;
+            document.getElementById("d1_output").innerHTML = sum;
 
+            fun_sel_output_type("1");//回到第一個頁籤
         }
 
 
+
+
+
+        ///
+        ///如果是手機，就覆寫hover
+        ///
+        var useragent = navigator.userAgent;
+        useragent = useragent.toLowerCase();
+
+        if (useragent.indexOf('iphone') != -1 || useragent.indexOf('ipad') != -1 || useragent.indexOf('ipod') != -1 || useragent.indexOf('android') != -1) {
+            document.write("<style>.but:hover {background-color: rgb(0, 177, 255)!important;}</style>");
+        }
+
+
+
     </script>
+
+
+
 </body>
 </html>
