--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         input[type='tel'] {
             padding: 5px;
             border: 1px solid #000;
+            width: 150px;
+            height: 20px;
         }
 
         .title {
@@ -49,7 +51,7 @@
                 margin: 0px;
                 color: #FFF;
                 font-size: 24px;
-                padding: 10px 5px;
+                padding: 10px ;
             }
 
         .but {
@@ -150,6 +152,27 @@
         input[type=radio] {
             transform: scale(1.2);
         }
+
+        .table_setting td {
+            height: 30px;
+        }
+
+        #tr_allow input[type=range] {
+            width: 110px;
+        }
+
+        #tr_allow a {
+            font-size: 20px;
+            line-height: 20px;
+        }
+        label,h2 {
+           /*禁止選取*/
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
     </style>
 
 
@@ -187,7 +210,7 @@
             <div onclick='fun_轉換(document.getElementById("img01"))' class="but" id="but_Apply" style="display:none;">套用設定</div>
 
 
-            <table border="0" cellspacing="0" cellpadding="0">
+            <table border="0" cellspacing="0" cellpadding="0" class="table_setting">
                 <tr title="水平的格子數量，不建議超過80">
                     <td style="padding-right:5px;">水平格數(1~120)</td>
                     <td><input type="tel" id="text_wid" value="50" /></td>
@@ -196,20 +219,46 @@
                     <td>輸出寬度</td>
                     <td><input type="tel" id="text_output" value="570" /></td>
                 </tr>
-                <tr>
+
+                <tr title="將白色的部分轉成透明。（可以將主題切換成深色來確認）">
                     <td>
                         將白色視為透明
-
                     </td>
                     <td>
                         <label><input type="radio" name="r_轉透明" value="t" id="radio_白色轉透明" />啟用 </label>
                         <a>　</a>
-                        <label><input type="radio" name="r_轉透明" value="f" checked />關閉 </label>
+                        <label><input type="radio" name="r_轉透明" value="f" id="radio_白色轉透明_f" />關閉 </label>
                     </td>
                 </tr>
 
+                <tr id="tr_allow" style="display:none;" title="白色轉透明的容忍值">
+                    <td>　　　└ 容許值</td>
+                    <td>
+                        <input type="range" id="range_allow" min="0" max="20" step="1" value="3" />
+                        <a id="a_range_value">(3)</a>
+                    </td>
+                </tr>
             </table>
 
+            <script>
+
+
+                //顯示或隱藏調整容許值的欄位
+                document.getElementById("radio_白色轉透明_f").onchange = function () {
+                    document.getElementById("tr_allow").style.display = "none";
+                };
+                document.getElementById("radio_白色轉透明").onchange = function () {
+                    document.getElementById("tr_allow").style.display = "table-row";
+                };
+
+                //顯示value
+                document.getElementById("range_allow").onchange = function () {
+                    document.getElementById("a_range_value").innerHTML = "(" + this.value + ")";
+                };
+
+                document.getElementById("range_allow").value = 3;
+                document.getElementById("radio_白色轉透明_f").checked = true;
+            </script>
 
         </div>
 
@@ -403,9 +452,12 @@
         <!--【說明】-->
         <div class="box">
             <h2>說明</h2>
-            說明：將圖片轉換成像素圖，並且用表格的形式呈現。<br> 版本：1.5.1
-            <br> 討論區：
-            <a href="https://forum.gamer.com.tw/C.php?bsn=60076&snA=3923782" target="_blank">討論區</a><br> 作者：
+            說明：將圖片轉換成像素圖，並且用表格的形式呈現。<br> 版本：1.5.2
+            <br>
+            討論區：
+            <a href="https://forum.gamer.com.tw/C.php?bsn=60076&snA=3923782" target="_blank">討論區</a>
+            <br> 
+            作者：
             <a href="https://home.gamer.com.tw/homeindex.php?owner=hbl917070" target="_blank">hbl917070（深海異音）</a>
 
 
@@ -487,7 +539,7 @@
         function fun_copy_table() {
             SelectText("d1_output");//選取物件
             document.execCommand('copy');//複製當前選取的東西
-            fun_alert("複製成功");
+            fun_alert("複製完畢");
         }
 
 
@@ -542,7 +594,7 @@
             var textarea_copy = document.getElementById(text_id);
             textarea_copy.select();
             document.execCommand('copy');
-            fun_alert("複製成功");
+            fun_alert("複製完畢");
 
             //textarea_copy.textContent = "";
 
@@ -719,6 +771,7 @@
             }
 
             var bool_白色轉透明 = document.getElementById("radio_白色轉透明").checked;
+            var int_容忍值 = 255 - Number(document.getElementById("range_allow").value);
 
             var sum = "<p>&nbsp;</p> <table cellspacing='0' cellpadding='0' width='" + output_wid + "' height='" + output_hei + "'>";
 
@@ -750,7 +803,7 @@
                     if (col_a < 3) {
                         td = "<td></td>";
                     } else if (bool_白色轉透明) {
-                        if (s.data[k + 0] >= 253 && s.data[k + 1] >= 253 && s.data[k + 2] >= 253) {
+                        if (s.data[k + 0] >= int_容忍值 && s.data[k + 1] >= int_容忍值 && s.data[k + 2] >= int_容忍值) {
                             td = "<td></td>";
                         }
                     }
@@ -863,16 +916,16 @@
         var useragent = navigator.userAgent;
         useragent = useragent.toLowerCase();
 
-        //if (useragent.indexOf('iphone') != -1 || useragent.indexOf('ipad') != -1 || useragent.indexOf('ipod') != -1 || useragent.indexOf('android') != -1) {
+        if (useragent.indexOf('iphone') != -1 || useragent.indexOf('ipad') != -1 || useragent.indexOf('ipod') != -1 || useragent.indexOf('android') != -1) {
             document.write("<style>" +
                 ".but:hover {background-color: rgb(0, 177, 255)}" +
                 "#table_output_type td:hover{color:inherit;}" +
                 "</style>");
-        //}
+        }
     </script>
 
 
-   
+
 </body>
 
 </html>
